Added publications json

--- a/portfolio/src/components/style.css
+++ b/portfolio/src/components/style.css
@@ -29,3 +29,19 @@
 #social-media{
     margin-bottom: 5px;
 }
+
+#image-div{
+    grid-column: 1;grid-row: 1;
+}
+
+#image-tag{
+    max-width: 100%;height: auto;
+}
+
+#desc-style{
+    padding-right: 100px;
+}
+
+#button-margin{
+    margin: 3px;
+}
