Added projects section

--- a/portfolio-react/src/components/css/style.css
+++ b/portfolio-react/src/components/css/style.css
@@ -75,3 +75,12 @@
 #button-margin{
     margin: 3px;
 }
+
+#subject_style{
+    margin-left: 5px;
+    margin-bottom: 5px;
+}
+
+#carousel_style{
+    margin-top: 25px;
+}
